# dabox

./: README.md
backend/: Cargo.toml
backend/dabox/: Cargo.toml
backend/dabox-api/: Cargo.toml
backend/dabox-api/src/: app.rs  error.rs  lib.rs  prelude.rs
backend/dabox-api/src/middlewares/: api_user.rs  mod.rs
backend/dabox-api/src/routes/: directory.rs
backend/dabox-core/: Cargo.toml
backend/dabox-core/src/: da_directory.rs  entity.rs  error.rs  lib.rs  prelude.rs
backend/dabox-core/src/da_repository/: mod.rs
backend/dabox-core/src/da_repository/backends/: mem.rs  mod.rs  pg.rs
backend/dabox-core/tests/: mem.rs
backend/dabox/src/: main.rs
frontend/: package.json  tailwind.config.js
frontend/src/: App.tsx  Components.ts
frontend/src/components/: Button.tsx  Popup.tsx  TreeView.tsx
frontend/src/hooks/: api.ts  session.ts
frontend/src/views/: DirectoryView.tsx  LoginView.tsx
