[package]
name = "dabox-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
axum = "0.7.7"
thiserror = "2.0.0"
tokio = { version = "1.41.1", features = ["full"] }

dabox-core = { path = "../dabox-core" }
async-trait = "0.1.83"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tower-http = { version = "0.6.1", features = ["trace"] }
