[package]
name = "dabox-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-recursion = "1.1"

sqlx = { version = "^0.8", features = ["runtime-tokio-native-tls", "macros", "postgres"], optional = true }


[features]
database = ["sqlx"]
