[package]
name = "dabox"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dabox-api = { path = "../dabox-api" }
dabox-core = { path = "../dabox-core" }
tokio = { version = "1.41.1", features = ["full"] }
dotenvy = "0.15.7"
async-recursion = { version = "1.1", optional = true }

[features]
database = ["dabox-core/database"]
default-dataset = ["async-recursion"]
